# smart_finance

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  structure.md
smart_finance/: manage.py
smart_finance/api/: permissions.py  serializers.py  urls.py  views.py
smart_finance/core/context_processors/: year.py
smart_finance/posts/: admin.py  models.py  urls.py  utils.py  views.py
smart_finance/posts/migrations/: 0001_initial.py
smart_finance/posts/tests/: test_forms.py  test_models.py  test_routes.py  test_urls.py  test_views.py
smart_finance/smart_finance/: settings.py  urls.py  wsgi.py
smart_finance/templates/: base.html  base_form.html
smart_finance/templates/about/: author.html  tech.html
smart_finance/templates/includes/: footer.html  header.html  paginator.html
smart_finance/templates/posts/: create_post.html  follow.html  group_list.html  index.html  post_detail.html  profile.html
smart_finance/templates/posts/includes/: comment.html  following.html  show_post.html  switcher.html  thumbnail.html
smart_finance/templates/users/: login.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
smart_finance/users/: urls.py
src/backend/application/services/: user.py
src/backend/domain/services/: app_settings.py
src/backend/infrastructure/repositories/postgresql/: database.py
src/backend/infrastructure/web/: app.py  config.py
src/backend/infrastructure/web/api/api_v1/: api.py
(+4 files in other folders)
